adopt Java 25 conventions