@@ -113,8 +113,8 @@ class KafkaStreamsAggregateHoppingWindowApplicationTest {
         List<KeyValue<String, KafkaUserAggregate>> results = outputTopic.readKeyValuesToList();
 
         // Homer arrives
-        assertEquals("Simpson@2000-01-01T00:56:00Z->2000-01-01T01:01:00Z", results.get(0).key);
-        assertIterableEquals(List.of(homer), results.get(0).value.getUsers());
+        assertEquals("Simpson@2000-01-01T00:56:00Z->2000-01-01T01:01:00Z", results.getFirst().key);
+        assertIterableEquals(List.of(homer), results.getFirst().value.getUsers());
 
         assertEquals("Simpson@2000-01-01T00:58:00Z->2000-01-01T01:03:00Z", results.get(1).key);
         assertIterableEquals(List.of(homer), results.get(1).value.getUsers());
@@ -210,8 +210,8 @@ class KafkaStreamsAggregateHoppingWindowApplicationTest {
 
         List<KeyValue<String, KafkaUserAggregate>> results = outputTopic.readKeyValuesToList();
 
-        assertEquals("Simpson@2000-01-01T00:56:00Z->2000-01-01T01:01:00Z", results.get(0).key);
-        assertIterableEquals(List.of(homer), results.get(0).value.getUsers());
+        assertEquals("Simpson@2000-01-01T00:56:00Z->2000-01-01T01:01:00Z", results.getFirst().key);
+        assertIterableEquals(List.of(homer), results.getFirst().value.getUsers());
 
         assertEquals("Simpson@2000-01-01T00:58:00Z->2000-01-01T01:03:00Z", results.get(1).key);
         assertIterableEquals(List.of(homer), results.get(1).value.getUsers());
@@ -306,8 +306,8 @@ class KafkaStreamsAggregateHoppingWindowApplicationTest {
         List<KeyValue<String, KafkaUserAggregate>> results = outputTopic.readKeyValuesToList();
 
         // Homer arrives
-        assertEquals("Simpson@2000-01-01T00:56:00Z->2000-01-01T01:01:00Z", results.get(0).key);
-        assertIterableEquals(List.of(homer), results.get(0).value.getUsers());
+        assertEquals("Simpson@2000-01-01T00:56:00Z->2000-01-01T01:01:00Z", results.getFirst().key);
+        assertIterableEquals(List.of(homer), results.getFirst().value.getUsers());
 
         assertEquals("Simpson@2000-01-01T00:58:00Z->2000-01-01T01:03:00Z", results.get(1).key);
         assertIterableEquals(List.of(homer), results.get(1).value.getUsers());
